fixed a part of alignment

--- a/frontend/packages/ux-editor/src/components/config/SelectPropertyEditor/SelectPropertyEditor.module.css
+++ b/frontend/packages/ux-editor/src/components/config/SelectPropertyEditor/SelectPropertyEditor.module.css
@@ -1,10 +1,3 @@
-.container {
-  display: grid;
-  gap: var(--fds-spacing-2);
-  padding-bottom: var(--fds-spacing-1);
-  align-items: center;
-}
-
 .viewMode {
   margin-top: var(--fds-spacing-1);
   margin-bottom: var(--fds-spacing-1);
@@ -13,7 +6,7 @@
 .editSelectProperty {
   display: flex;
   flex-direction: row;
-  align-items: end;
+  align-items: flex-start;
   gap: var(--fds-spacing-4);
   margin-bottom: var(--fds-spacing-3);
 }
@@ -24,4 +17,8 @@
 
 .viewSelectProperty {
   padding-left: 0;
+}
+
+.closeButton {
+  margin-top: var(--fds-spacing-8);
 }
